# frost-lib-py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
examples/: README.md  btc-tx-normal.py  btc-tx-tweak.py  dkg.py  evm-verification.py  key-gen.py  keypair.py  malicues-detection.py  requirements.txt  requiremets.txt  sign.py  tweek-ed25519.py  tweek-secp256k1-tr.py  utils.py  wallet-split.py
examples/contracts/: SchnorrSECP256K1Verifier.sol
frost-core/: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
frost-core/src/: common.rs  lib.rs
frost-core/src/ed25519/: mod.rs  structs.rs  utils.rs
frost-core/src/secp256k1/: mod.rs  utils.rs
frost-core/src/secp256k1_evm/: mod.rs  structs.rs
frost-core/src/secp256k1_tr/: mod.rs  structs.rs  utils.rs
src/: lib.rs
src/ed25519/: mod.rs  structs.rs  utils.rs
src/frost_lib/: __init__.py  abstracts.py  curves.py  custom_types.py
src/secp256k1/: mod.rs  utils.rs
src/secp256k1_tr/: mod.rs  structs.rs  utils.rs
