[project]
name = "frost-core"
version = "0.2.0"
description = "Convert implementation of rust to python with Pyo3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["maturin>=1,<2"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = 'pyo3'
